hphp/hack/test/typecheck/unbound_name/module_cst.php.exp
ERROR: File "module_cst.php", line 3, characters 8-20:
Unbound name: `doesnotexists` (a module) (Naming[2049])
