hphp/hack/test/typecheck/unbound_name/module_cst.php
<?hh

module doesnotexists;

const int C = 42;
